# in-action-book

./: .env.example  .gitattributes  .gitignore  CITATION.cff  DEPLOY.md  README.md  SEO.md  astro.config.mjs  package-lock.json  package.json
public/: manifest.webmanifest
public/audio/: manifest.json
scripts/: build-icons.mjs
scripts/audio/: README.md  generate.py  manifest.py  preprocess.py  pyproject.toml  requirements.txt  run.sh
src/: content.config.ts
src/components/: AudioPlayer.astro
src/content/book/: PROGRESS.md  appendix_A.md  appendix_B.md  appendix_C.md  appendix_D.md  appendix_E.md  appendix_F.md
src/content/book/chapter_01/: section_1_1.md  section_1_2.md  section_1_3.md  section_1_4.md  section_1_5.md  section_1_6.md  section_1_x.md
src/content/book/chapter_02/: section_2_1.md  section_2_2.md  section_2_3.md  section_2_4.md  section_2_5.md  section_2_6.md  section_2_x.md
src/content/book/chapter_03/: section_3_1.md  section_3_2.md  section_3_3.md  section_3_4.md  section_3_5.md  section_3_6.md  section_3_x.md
src/content/book/chapter_04/: section_4_1.md  section_4_2.md  section_4_3.md  section_4_4.md  section_4_5.md  section_4_x.md
src/content/book/chapter_05/: section_5_1.md  section_5_2.md  (+5 more)
src/layouts/: SiteLayout.astro
src/lib/: book-loader.ts  progress.ts  refs.ts  rehype-table-wrap.mjs  remark-strip-h1.mjs  seo.ts  views.ts
src/pages/: 404.astro  about.astro  cite.astro  contact.astro  contents.astro  index.astro  robots.txt.ts  rss.xml.ts  search.astro
src/scripts/: view-counter.client.ts
src/styles/: global.css
(+53 files in other folders)
