[project]
name = "audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4,<1.0",
    "markdown-it-py>=3.0,<4.0",
    "numpy>=2.0,<3.0",
    "pydub>=0.25.1,<1.0",
    "pyyaml>=6.0,<7.0",
    "soundfile>=0.13,<1.0",
    "torch>=2.4,<3.0",
]
